src/index.css
body {
    margin: 0;
    font-family: Verdana, sans-serif;
}

#text{
    font-size: 14px;
    margin-left: 8%;
    margin-right: 8%;
}

.poemCont{
    margin-top: 20%;
    margin-bottom: 10%;
}

/*footer{
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 50px;
    background-color: darkgrey;
    color: white;
    text-align: center;
}*/

/*Grid style*/
.container {
    display: grid;
    grid-auto-flow: row;
    grid-gap: 5%;
    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
    grid-template-rows: 50px 50px;
    margin-right: 5%;
    margin-left: 5%;
}

@media (max-width: 800px) {
    /*tablets*/
    .container{
        display: flex;
        flex-direction: column;

    }
    .item{
        margin-top: 20px;
    }
}

@media (max-width: 500px) {
    /*mobil*/
    .container{
        grid-auto-flow: column;
    }
}

